test/classes/delete-free/coercions-covariant-const-ref.good
coercions-covariant-const-ref.chpl:16: In function 'testA':
coercions-covariant-const-ref.chpl:18: error: in call to 'acceptOwnedMyClassA', cannot pass result of coercion by reference
coercions-covariant-const-ref.chpl:18: note: implicit coercion from 'owned SubClass' to 'owned MyClass'
coercions-covariant-const-ref.chpl:12: note: when passing to 'const ref' intent formal 'own'
